  shadowed properly).

--Fixed bug in movement acceleration, which is meant only for panning
  (in blueprints and when paused during playback) affecting robber movement.

--Improved legibility of blueprints by adding inner shading to walls, pits,
  and trapdoors.

--Improved legibility of doors on blueprints by adding knobs.




Version 6   2013-May-24

--Fixed so that tools with reach cannot be used through unbroken windows
  (thanks Buddy Gorven).

--Changed house menus to remember page position and search string (so you
  don't have to scroll through the high-value houses over and over to get to
  your houses of interest).  Less clicking, less server load (thanks Michael 
  Weber).

--Fixed so that suicide on doorstep (first move) shows up on tape.

--After login fails, client now re-asks reflector for server URL, in case user
  types different email second time that should bounce them to a different
  server (thanks Martijn van der Ven).

--Fixed bug that caused %s to replace family names after death (thanks Stan
  Volchenok).

--Fixed memory leak in robbery checkout.

--Fixed wife path return behavior after child death (she used to return to the
  point from which she started searching for her dead child, and now she
  returns to her original location).

--Fixed bug where family blocked in by other dead family members do not die
  permanently.

--Fixed serial number ordering during request retry when other, later requests
  are waiting in the request queue.

--Fixed bug in left-right power propagation triggering voltage-triggered
  switches immediately to the south.

--Added new objects for horizontal-only and vertical-only wiring (thanks Gavin
  Delphia).

--[Live server fix, May 8, 2013]  Experimenting with salaries on server only
  being paid for houses that haven't been robbed since the last edit.

--Crowbar now can open a wooden door without stepping through it.

--Fixed encoding of emails to support (vaild) emails that contain '+'.
